--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/fwrdatabase
+DATABASE_URL=postgresql://fw_user:fw_password_123@localhost:5432/futurework
