--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ email-validator>=2.0.0
 # Security (for future authentication)
 passlib[bcrypt]>=1.7.4
 python-jose[cryptography]>=3.3.0
+PyJWT>=2.8.0
 bcrypt>=4.0.1
 
 # Environment and Configuration
